--- a/views/deleteProduct.ejs
+++ b/views/deleteProduct.ejs
@@ -89,12 +89,7 @@
       </div>
       <div class="modal-body">
 
-        <% if (!lote) { %>
-          <h2>Você deseja apagar a tabela inteira?</h2>
-      <% } else { %>
-          <h2>Você deseja apagar este item?</h2>
-      <% } %>
-      
+      <h1>Você tem certeza que deseja apagar os itens selecionados?</h1>
        
       </div>
       <div class="modal-footer">
