--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 </main>
 
-<footer>
-  <p>Copyright © <%= new Date().getFullYear() %></p>
+<footer class="container">
+  <p>&copy; <%= new Date().getFullYear() %> Company, Inc.</p>
 </footer>
 
 </body>
