--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,39 +13,53 @@
     <link rel="stylesheet" href="/styles/main.css" />
   </head>
 
-  <body class="d-flex align-items-center justify-content-center vh-100">
+  <div class="p-3 text-dark bg-light border border-4 border-danger rounded-3">
+  <body class="login d-flex align-items-center justify-content-center vh-100">
     <main class="form-signin">
       <form action="/login" method="POST">
+        <div class="text-center">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Logo_Farm%C3%A1cias_Pague_Menos.png" class="rounded h-25 d-inline-block" style="width: 150px;" alt="">
+          
+        </div>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email:</label>
-          <input type="email" class="form-control form-control-lg w-100" name="username" />
+          <input type="email" class="form-control form-control-lg w-100 bg-light text-dark border-danger border-2" name="username" />
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Senha:</label>
-          <input type="password" class="form-control form-control-lg w-100" name="password" />
+          <input type="password" class="form-control form-control-lg w-100 bg-light text-dark border-danger border-2" name="password" />
         </div>
+
+        
       
 
         <style>
+          body{
+            background-image: url(https://marcasmais.com.br/wp-content/uploads/2020/07/Farm%C3%A1cias-Pague-Menos.jpg);
+          }
           #formHelp {
-            font-size: 1.25rem; /* Aumenta o tamanho do texto */
+            font-size: 1.50rem; 
           }
         </style>
 
         <% if (error_msg) { %>
-          <div id="formHelp" class="form-text mb-3 w-100">
+          <div id="formHelp" class="form-text text-dark w-100">
             <%= error_msg %>
           </div>
         <% } %>
 
         <% if (success_msg) { %>
-          <div id="formHelp" class="form-text mb-3 w-100">
+          <div id="formHelp" class="form-text text-dark w-100">
             <%= success_msg %>
           </div>
         <% } %>
-        
-        <button type="login" class="btn btn-primary btn-lg">Login</button>
-        <a class="btn btn-primary" href="/register" role="button">Criar uma conta</a>
+
+        <div class="d-grid gap-2">
+        <button type="login" class="btn btn-outline-light btn-lg bg-danger border-dark">Login</button>
+        <a class="btn btn-outline-light btn-lg bg-danger border-dark" href="/register" role="button">Criar uma conta</a>
+        </div>
+      </div>
+
       </form>
     </main>
   </body>
