--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="pt-BR" data-bs-theme="">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto</title>
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
   <link href="/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"/>
@@ -15,12 +15,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
   <script src="https://votacao.uems.br/media/bootstrap-datepicker/locales/bootstrap-datepicker.pt-BR.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <link href="styles/main.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="index">
   <main>  
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a href="/principal">
           <img src="https://paguemenos.vtexassets.com/arquivos/logoMarcaPagueMenos.png" width="185" height="50" class="navbar-brand me-2" style="border-left: 40px solid transparent;" >
@@ -36,13 +37,13 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent" style="border-left: 30px solid transparent;">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent" style="border-left: 50px solid transparent;">
           <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item ms-2 me-2">
-                  <a class="nav-link" href="/cadProduct">Cadastro de Produtos</a>
+                  <a class="nav-link text-white fs-5 fw-bold" href="/cadProduct">Cadastro de Produtos</a>
               </li>
               <li class="nav-item ms-2 me-2">
-                  <a class="nav-link" href="/constProduct">Consulta de Produtos</a>
+                  <a class="nav-link text-white fs-5 fw-bold" href="/constProduct">Consulta de Produtos</a>
               </li>
               <!--<li class="nav-item dropdown ms-2 me-2">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -57,17 +58,16 @@
               </li>-->
           </ul>
 
+          
           <div class="dropdown">
             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="https://t4.ftcdn.net/jpg/00/64/67/63/360_F_64676383_LdbmhiNM6Ypzb3FM4PPuFP9rHe7ri8Ju.webp" alt="" width="32" height="32" class="rounded-circle me-2">
-              <strong>User</strong>
+              <img src="https://cdn-icons-png.flaticon.com/512/4980/4980623.png" alt="" width="32" height="32" class="rounded-circle me-2">
+              <strong class="text-danger">User</strong>
             </a>
-            <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-              <li><a class="dropdown-item" href="#">New project...</a></li>
-              <li><a class="dropdown-item" href="#">Settings</a></li>
-              <li><a class="dropdown-item" href="#">Profile</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="/">Sign out</a></li>
+            <ul class="dropdown-menu dropdown-menu-end border-1 border-danger bg-white">
+              <li><a class="dropdown-item text-danger" href="#">Profile</a></li>
+              <li><hr class="dropdown-divider bg-danger"></li>
+              <li><a class="dropdown-item text-danger" href="/">Sair</a></li>
             </ul>
           </div>
       </div>
