Alterações tela principal

--- a/views/deleteProduct.ejs
+++ b/views/deleteProduct.ejs
@@ -52,7 +52,7 @@
             <option value="Vencidos">Vencidos</option>
           </select>
 
-          <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-danger">Deletar</button>
+          <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-danger">Apagar</button>
         </div>
         
       <div id="tableHelp" class="form-text mb-3"><%= text %></div>
@@ -89,12 +89,12 @@
       </div>
       <div class="modal-body">
 
-      <h1>Você tem certeza que deseja apagar os itens selecionados?</h1>
+      <h1>Você tem certeza que deseja apagar o(s) item(s) selecionado(s)?</h1>
        
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-primary" id="confirmDelete">Deletar</button>
+        <button type="button" class="btn btn-primary" id="confirmDelete">Apagar</button>
       </div>
     </div>
   </div>
