--- a/views/cadProduct.ejs
+++ b/views/cadProduct.ejs
@@ -25,7 +25,7 @@
   </header>
 </div>
   <form action="/cadProduct" method="POST">
-    <div class="container d-flex justify-content-center">
+    <div class="cadastro container d-flex justify-content-center">
       <div class="p-5 bg-body-tertiary rounded-3 text-center">
         <div class="form-floating mb-3" style="width: 300px">
           <input
