--- a/views/constProduct.ejs
+++ b/views/constProduct.ejs
@@ -43,7 +43,7 @@
                 </select>
 
                 <select class="form-select me-3"  style="width: 300px" aria-label="Default select example" name="consulta">
-                  <option value="" selected>Selecione uma Consulta</option>
+                  <option value="" selected>Selecione um tipo de Consulta</option>
                   <option value="Retirada">Retirada</option>
                   <option value="Desconto">Desconto</option>
                   <option value="Vencidos">Vencidos</option>
@@ -53,7 +53,7 @@
                   Consultar
                 </button>
 
-                <a class="btn btn-danger" href="/deleteProduct">Deletar</a>
+                <a class="btn btn-danger" href="/deleteProduct">Apagar</a>
               </div>
               
             <div id="tableHelp" class="form-text mb-3"><%= text %></div>
