--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,6 +43,9 @@
               <li class="nav-item ms-2 me-2">
                   <a class="nav-link text-white fs-5 fw-bold" href="/constProduct">Consulta de Produtos</a>
               </li>
+              <li class="nav-item ms-2 me-2">
+                <a class="nav-link text-white fs-5 fw-bold" href="/tutorial">Tutorial</a>
+              </li>
               <!--<li class="nav-item dropdown ms-2 me-2">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Dropdown
@@ -63,7 +66,6 @@
               <strong class="text-danger">User</strong>
             </a>
             <ul class="dropdown-menu dropdown-menu-end border-1 border-danger bg-white">
-              <li><a class="dropdown-item text-danger" href="#">Profile</a></li>
               <li><hr class="dropdown-divider bg-danger"></li>
               <li><a class="dropdown-item text-danger" href="/">Sair</a></li>
             </ul>
