Projeto (quase) finalizado

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,15 @@
 </main>
 
-<footer class="container">
-  <p>&copy; <%= new Date().getFullYear() %> Company, Inc.</p>
+<footer class="bg-dark text-white text-center py-4">
+  <p>&copy; <%= new Date().getFullYear() %> - Desenvolvimento de Software para Redes de Farmácias - EMPREENDIMENTOS PAGUE MENOS S.A.</p>
+  <p>Projeto acadêmico para Universidade Nove de Julho</p>
+
+  <div class="mt-3">
+    <a href="https://github.com/henrique0120/Projeto_Javascript_2024-2" class="text-white">GitHub</a>
+  </div>
 </footer>
 
 </body>
 
 </html>
+
