--- a/views/tutorial.ejs
+++ b/views/tutorial.ejs
@@ -58,15 +58,10 @@
       </video>
     </div>
     <hr class="featurette-divider">
-
   </div>
 </div>
 
-<footer class="container">
-    <p class="float-end"><a href="#">Voltar ao início</a></p>
-    <p>&copy; <%= new Date().getFullYear() %> Company, Inc.</p>
-</footer>
-
+<%- include("partials/footer.ejs") %>
 
 
 
