--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -11,6 +11,21 @@ body {
     background-position: center;
 }
 
+footer {
+    background-color: #343a40;
+    color: #fff;
+}
+
+footer a {
+    color: #28a745;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
 .img-crop {
     object-fit: cover;
     object-position: center;
