--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,17 +79,24 @@
 
         <div class="row justify-content-center">
           <div class="col-lg-4">
-            <img src="https://cdn-icons-png.flaticon.com/512/15821/15821650.png" class="bd-placeholder-img" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></img>
+            <img src="/images/logo.png" class="bd-placeholder-img" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></img>
             <h2 class="fw-normal">Cadastro de produtos</h2>
             <p>Cadastre todos os produtos do seu estoque e consulte eles futuramente</p>
             <p><a class="btn btn-danger btn-lg" href="/cadProduct">Clique aqui</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img src="https://cdn-icons-png.flaticon.com/512/2774/2774727.png" class="bd-placeholder-img " width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+            <img src="/images/consulta.png" class="bd-placeholder-img " width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
             <h2 class="fw-normal">Visualizar produtos</h2>
-            <p>Visualize todos os produtos que ja cadastrados anteriormente</p>
+            <p>Visualize todos os produtos cadastrados anteriormente no sistema</p>
             <p><a class="btn btn-danger btn-lg" href="/constProduct">Clique aqui</a></p>
             
+          </div><!-- /.col-lg-4 -->
+
+          <div class="col-lg-4">
+            <img src="/images/tutorial.png" class="bd-placeholder-img " width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+            <h2 class="fw-normal">Tutorial</h2>
+            <p>Clique para aprender o procedimento de cadastro e consulta de produtos</p>
+            <p><a class="btn btn-danger btn-lg" href="/tutorial">Clique aqui</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -100,10 +107,7 @@
         
         
 
-        <footer class="container">
-          <p class="float-end"><a href="#">Voltar ao início</a></p>
-          <p>&copy; <%= new Date().getFullYear() %> Company, Inc.</p>
-        </footer>
+      <%- include("partials/footer.ejs") %>
         
       
 
