--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,7 +1,3 @@
-/* GLOBAL STYLES
--------------------------------------------------- */
-/* Padding below the footer and lighter body text */
-
 html,
 body {
     height: 100%;
@@ -11,21 +7,6 @@ body {
     background-position: center;
 }
 
-footer {
-    background-color: #343a40;
-    color: #fff;
-}
-
-footer a {
-    color: #28a745;
-    text-decoration: none;
-}
-
-footer a:hover {
-    color: #fff;
-    text-decoration: underline;
-}
-
 .img-crop {
     object-fit: cover;
     object-position: center;
@@ -33,6 +14,39 @@ footer a:hover {
     height: 100%;
 }
 
+/* botão tema */
+
+.bi {
+    vertical-align: -.125em;
+    fill: currentColor;
+}
+
+.tema {
+    --bd-violet-bg: #712cf9;
+    --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
+
+    --bs-btn-font-weight: 600;
+    --bs-btn-color: var(--bs-white);
+    --bs-btn-bg: var(--bd-violet-bg);
+    --bs-btn-border-color: var(--bd-violet-bg);
+    --bs-btn-hover-color: var(--bs-white);
+    --bs-btn-hover-bg: #6528e0;
+    --bs-btn-hover-border-color: #6528e0;
+    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+    --bs-btn-active-color: var(--bs-btn-hover-color);
+    --bs-btn-active-bg: #5a23c8;
+    --bs-btn-active-border-color: #5a23c8;
+}
+
+.bd-mode-toggle {
+    z-index: 1500;
+}
+
+.bd-mode-toggle .dropdown-menu .active .bi {
+    display: block !important;
+}
+
+/* botão tema */
 
 body .login {
     background-image: url(https://marcasmais.com.br/wp-content/uploads/2020/07/Farm%C3%A1cias-Pague-Menos.jpg);
@@ -46,8 +60,6 @@ body .register {
 main {
     flex: 1 auto;
 }
-
-
 
 .form-signin {
     flex: 0 auto;
@@ -86,9 +98,7 @@ header {
 }
 */
 
-nav {
-    background-color: rgb(33, 37, 41);
-}
+
 
 .dropdown ul a:hover {
     background-color: rgb(224, 224, 224);
@@ -97,12 +107,8 @@ nav {
 .dropdown {
     margin-right: 30px;
     position: absolute;
-    /* Posiciona o dropdown absolutamente em relação à navbar */
-    right: 0;
-    /* Alinha o dropdown à direita da navbar */
 
-    /* Posiciona o dropdown logo abaixo da navbar */
-    /* Outros estilos para o dropdown */
+    right: 0;
 }
 
 /* CUSTOMIZE THE CAROUSEL
