--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,14 +1,19 @@
 </main>
 
-<footer class="bg-dark text-white text-center py-4">
+<footer class="text-center py-4">
   <p>&copy; <%= new Date().getFullYear() %> - Desenvolvimento de Software para Redes de Farmácias - EMPREENDIMENTOS PAGUE MENOS S.A.</p>
   <p>Projeto acadêmico para Universidade Nove de Julho</p>
 
   <div class="mt-3">
-    <a href="https://github.com/henrique0120/Projeto_Javascript_2024-2" class="text-white">GitHub</a>
+    <a href="https://github.com/henrique0120/Projeto_Javascript_2024-2" class="">GitHub</a>
   </div>
 </footer>
 
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.pt-BR.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
