--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR" data-bs-theme="dark">
+<html lang="pt-BR" data-bs-theme="">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projeto</title>
+  <title>Projeto em Desenvolvimento de Software</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
   <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.pt-BR.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
   <link href="styles/main.css" rel="stylesheet">
 </head>
 
@@ -38,13 +39,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent" style="border-left: 50px solid transparent;">
           <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item ms-2 me-2">
-                  <a class="nav-link text-white fs-5 fw-bold" href="/cadProduct">Cadastro de Produtos</a>
+                  <a class="nav-link fs-5 fw-bold" href="/cadProduct">Cadastro de Produtos</a>
               </li>
               <li class="nav-item ms-2 me-2">
-                  <a class="nav-link text-white fs-5 fw-bold" href="/constProduct">Consulta de Produtos</a>
+                  <a class="nav-link  fs-5 fw-bold" href="/constProduct">Consulta de Produtos</a>
               </li>
-              <li class="nav-item ms-2 me-2">
-                <a class="nav-link text-white fs-5 fw-bold" href="/tutorial">Tutorial</a>
+              <li class="nav-item ms-2 me-2"> 
+                <a class="nav-link  fs-5 fw-bold" href="/tutorial">Tutorial</a>
               </li>
               <!--<li class="nav-item dropdown ms-2 me-2">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -63,14 +64,65 @@
           <div class="dropdown">
             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
               <img src="https://cdn-icons-png.flaticon.com/512/4980/4980623.png" alt="" width="32" height="32" class="rounded-circle me-2">
-              <strong class="text-danger">User</strong>
+              <strong class="text-danger"><%= currentEmail %></strong>
             </a>
             <ul class="dropdown-menu dropdown-menu-end border-1 border-danger bg-white">
               
               <li><a class="dropdown-item text-danger" href="/">Sair</a></li>
             </ul>
           </div>
-      </div>
+          
       
       </div>
     </nav>
+
+    <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
+      <button class="tema btn btn-primary py-2 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="bi bi-circle-half"></i> Tema
+      </button>
+      <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
+        <li>
+          <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light" aria-pressed="false">
+            <svg class="bi me-2 opacity-50" width="1em" height="1em"><use href="#sun-fill"></use></svg>
+            Claro
+            <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
+          </button>
+        </li>
+        <li>
+          <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark" aria-pressed="false">
+            <svg class="bi me-2 opacity-50" width="1em" height="1em"><use href="#moon-stars-fill"></use></svg>
+            Escuro
+            <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
+          </button>
+        </li>
+        <li>
+          <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto" aria-pressed="true">
+            <svg class="bi me-2 opacity-50" width="1em" height="1em"><use href="#circle-half"></use></svg>
+            Auto
+            <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
+          </button>
+        </li>
+      </ul>
+    </div>
+  
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        const body = document.body;
+        const themeButtons = document.querySelectorAll('[data-bs-theme-value]');
+        
+        function setTheme(theme) {
+          body.setAttribute('data-bs-theme', theme);
+          localStorage.setItem('selectedTheme', theme);
+        }
+  
+        themeButtons.forEach(button => {
+          button.addEventListener('click', () => {
+            const selectedTheme = button.getAttribute('data-bs-theme-value');
+            setTheme(selectedTheme);
+          });
+        });
+  
+        const savedTheme = localStorage.getItem('selectedTheme') || 'auto';
+        setTheme(savedTheme);
+      });
+    </script>
